feat: secure app & add deployment configs for Render + Netlify
- Move all secrets to env vars (MONGO_URI, GEMINI_API_KEY, JWT_SECRET)
- Fix SecurityConfig: restrict CORS to specific origins, require auth on all routes
- Add VITE_API_URL support in frontend api.js for production
- Add axios interceptor for automatic JWT token injection
- Create netlify.toml for frontend deployment
- Create render.yaml for backend deployment
- Add frontend/public/_redirects for SPA routing on Netlify
- Suppress PDFBox font noise via logging config
- Fix null safety in MaterialService
- Add comprehensive .gitignore